--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
    "version": "0.0.1",
    "description": "A little platform for fruit lovers",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
+      "@types/cookie": "^0.4.1",
+      "@types/cookie-parser": "^1.4.2",
       "@types/express": "^4.17.13",
+      "@types/jsonwebtoken": "^8.5.7",
       "@types/morgan": "^1.9.3",
       "@types/node": "^17.0.8",
       "morgan": "^1.10.0",
@@ -12,8 +16,14 @@
       "typescript": "^4.5.4"
    },
    "dependencies": {
+      "bcrypt": "^5.0.1",
+      "class-transformer": "^0.5.1",
       "class-validator": "^0.13.2",
+      "cookie": "^0.4.1",
+      "cookie-parser": "^1.4.6",
+      "dotenv": "^11.0.0",
       "express": "^4.17.2",
+      "jsonwebtoken": "^8.5.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.41"
