--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,18 @@
       "experimentalDecorators": true,
       "sourceMap": true,
       "esModuleInterop": true,
+      
+      "noImplicitAny": true,
+      "strictNullChecks": true,
+      "strictFunctionTypes": true,
+      "strictBindCallApply": true,
+      "noImplicitThis": true,
+      //other
+      "alwaysStrict": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noImplicitReturns": true,
+      "noFallthroughCasesInSwitch": true,
+      "resolveJsonModule": true
    }
 }
