--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "axios": "^0.25.0",
+    "classnames": "^2.3.1",
     "next": "12.0.8",
     "postcss": "^8.4.5",
     "react": "17.0.2",
