--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.0",
     "@types/react": "^17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
