--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "next": "12.0.8",
     "postcss": "^8.4.5",
     "react": "17.0.2",
