--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "noImplicitThis": true,
       //other
       "alwaysStrict": true,
-      "noUnusedLocals": true,
+      //"noUnusedLocals": true,
       "noUnusedParameters": true,
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
