--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "@types/jsonwebtoken": "^8.5.7",
       "@types/morgan": "^1.9.3",
       "@types/node": "^17.0.8",
+      "concurrently": "^7.0.0",
       "morgan": "^1.10.0",
       "nodemon": "^2.0.15",
       "ts-node": "^10.4.0",
@@ -28,11 +29,15 @@
       "jsonwebtoken": "^8.5.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.41"
+      "typeorm": "0.2.41",
+      "typeorm-seeding": "^1.6.1"
    },
    "scripts": {
       "start": "ts-node src/server.ts",
-      "dev": "nodemon --exec ts-node src/server.ts",
-      "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+      "server": "nodemon --exec ts-node src/server.ts",
+      "client": "cd client && npm run dev",
+      "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+      "dev": "concurrently \"npm run server\" \"npm run client\" -n server, client",
+      "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
    }
 }
