--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.2.2",
     "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
