--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "@types/morgan": "^1.9.3",
       "@types/multer": "^1.4.7",
       "@types/node": "^17.0.8",
+      "@types/validator": "^13.7.2",
       "concurrently": "^7.0.0",
       "morgan": "^1.10.0",
       "nodemon": "^2.0.15",
@@ -35,7 +36,7 @@
       "typeorm-seeding": "^1.6.1"
    },
    "scripts": {
-      "start": "ts-node src/server.ts",
+      "start": "node build/server.js",
       "server": "nodemon --exec ts-node src/server.ts",
       "client": "cd client && npm run dev",
       "typeorm": "ts-node ./node_modules/typeorm/cli.js",
