--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,7 @@
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
       "resolveJsonModule": true
-   }
+   },
+   "include": ["src/**/*"],
+   "exclude": ["node_modules", "client"]
 }
