--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: rebuild
-      uses: garygrossgarten/github-action-ssh@release
-      with:
-        command: ls -a
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        privateKey: ${{ secrets.PRIVATE_KEY }}
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: |
+            cd fruitfulapp.com
+            git pull
+            npm install
+            npx tsc
+            cd client
+            npm run build
+            pm2 restart server client
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          privateKey: ${{ secrets.PRIVATE_KEY }}
